# fastapp

./: .env.example  .env.test  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 6146cf0fcd70_initial_migration.py  62c41e1193bb_roles.py  730f426c24c9_user_task_connection.py  8d5141aa1260_init.py
app/: config.py  main.py
app/core/: auth.py  database.py
app/models/: task.py  user.py
app/repository/: task_repository.py  user_repository.py
app/routers/: auth_router.py  task_router.py  user_router.py
app/schemas/: task_schema.py  token_schema.py  user_schema.py
app/services/: task_service.py  user_service.py
src/fastapp/: config.py  main.py
src/fastapp/core/: auth.py  database.py  exceptions.py  limiter.py  permissions.py  security.py
src/fastapp/models/: task.py  user.py
src/fastapp/repositories/: base_repository.py  task_repository.py  user_repository.py
src/fastapp/routers/: auth_router.py  health_router.py  task_router.py  user_router.py
src/fastapp/schemas/: healthcheck_schema.py  role_schema.py  task_schema.py  token_schema.py  user_schema.py
src/fastapp/services/: task_service.py  user_service.py
tests/: conftest.py
tests/fixtures/: app.py  database.py  repositories.py  tasks.py  users.py
tests/load/: locust.py
tests/unit/test_models/: test_task.py  test_task_model.py  test_user.py  test_user_model.py
tests/unit/test_repositories/: test_task_repository.py  test_user_repository.py
tests/unit/test_utils/: test_auth.py  (+1 more)
(+7 files in other folders)
